--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                 <li>Contenuti di fine pagina comuni,da inserire nel  tag footer </li>
             </ul>
         </Article>
-        
+        <Article>
+            <h2>Formattazione del codice</h2>
+            <p>Il testo dell'articolo dovrà essere  formattato per identificare tutte le parti da  selezionare con i CSS. Perciò i passisaranno:</p>
+            <ol>
+                <li>Progettare il Markup assegnango ad ogni specifico testo il tag appropriato</li>
+                <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+                <li>Applicare gli stili CSS </li>
+            </ol>
+        </Article>
 
         <table>
           <caption>
