--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     </header>
     <main>
       <selection>
-        <Article>
-            <h2>Come creare  un  template per i post di Mario Rossi - pubblicato il 25-10-2020</h2>
-            <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le  parti comuni da applicare a tutte le  pagine</p>
-            <p>Le varie aree saranno quindi suddivise in:</p>
-            <ul>
-                <li>Contenuti di intestazione del tag</li>
-                <li>Contenuti centrali variabili del tag</li>
-                <li>Contenuti di fine pagina comuni,da inserire nel  tag footer </li>
-            </ul>
-        </Article>
-        <Article>
-            <h2>Formattazione del codice</h2>
-            <p>Il testo dell'articolo dovrà essere  formattato per identificare tutte le parti da  selezionare con i CSS. Perciò i passisaranno:</p>
-            <ol>
-                <li>Progettare il Markup assegnango ad ogni specifico testo il tag appropriato</li>
-                <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
-                <li>Applicare gli stili CSS </li>
-            </ol>
-        </Article>
+        <article>
+          <h2>Come creare un template per i post di Mario Rossi - pubblicato il 25-10-2020</h2>
+          <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
+          <p>Le varie aree saranno quindi suddivise in:</p>
+          <ul>
+            <li>Contenuti di intestazione del tag</li>
+            <li>Contenuti centrali variabili del tag</li>
+            <li>Contenuti di fine pagina comuni,da inserire nel tag footer</li>
+          </ul>
+        </article>
+        <article>
+          <h2>Formattazione del codice</h2>
+          <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passisaranno:</p>
+          <ol>
+            <li>Progettare il Markup assegnango ad ogni specifico testo il tag appropriato</li>
+            <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+            <li>Applicare gli stili CSS</li>
+          </ol>
+        </article>
 
         <table>
           <caption>
@@ -91,7 +91,7 @@
         ></iframe>
       </selection>
       <form>
-        <p><b>Vuoi rimanere aggionrato su altre novità del blog? Isccriviti alla nostra newsletter:</p></b>
+        <p><b>Vuoi rimanere aggionrato su altre novità del blog? Isccriviti alla nostra newsletter:</b></p>
         <div>
           <label for="campo nome">Inserisci il tuo nome:</label>
           <input type="text" id="campo nome" placeholder="Inserisci il tuo nome" autofocus required />
@@ -104,43 +104,48 @@
           <label for="mail">Inserisci la una mail valida</label>
           <input type="email" id="mail" placeholder="Inserisci una mail valida:" autofocus required />
         </div>
+        <button>ISCRIVITI!</button>
       </form>
-      <button>ISCRIVITI!</button>
     </main>
     <aside>
-        <selection>
-            <article>
-                <div>
-                <p>(area correlati)<br>
-                    Articoli correlati<br>
-                    Validare il codice HTML<br>
-                    Categoria: develop<br>
-                    Data: 18-9-2020
-                </p>
-            </div>
+      <selection>
+        <article>
+          <div>
+            <p>
+              (area correlati)<br />
+              Articoli correlati<br />
+              Validare il codice HTML<br />
+              Categoria: develop<br />
+              Data: 18-9-2020
+            </p>
+          </div>
         </article>
         <article>
-            <div>
-            <p>Correggere la sintassi<br>
-                Categoria: develop<br>
-                Data: 16-9-2020<br>
+          <div>
+            <p>
+              Correggere la sintassi<br />
+              Categoria: develop<br />
+              Data: 16-9-2020<br />
             </p>
-        </div>
-    </article>
-    <article>
-        <div>
-        <p>Meno Kb nella pagina<br>
-            Categoria: ottimizzazione<br>
-            Data: 30-9-2020
-        </p>
-    </div>
-</article>
-        </selection>
+          </div>
+        </article>
+        <article>
+          <div>
+            <p>
+              Meno Kb nella pagina<br />
+              Categoria: ottimizzazione<br />
+              Data: 30-9-2020
+            </p>
+          </div>
+        </article>
+      </selection>
     </aside>
     <footer>
-        <p>Blog Epicode %copy2023<br>
-            Testata online di Mario Rossi, registrata con prot. n.213/2018 - <br>via Luigi Einaudi 2 - Milano. P.IVA 00112233.<br>
-            <a href="#"> info@epicode.school</a></p>
+      <p>
+        Blog Epicode %copy2023<br />
+        Testata online di Mario Rossi, registrata con prot. n.213/2018 - <br />via Luigi Einaudi 2 - Milano. P.IVA 00112233.<br />
+        <a href="#"> info@epicode.school</a>
+      </p>
     </footer>
   </body>
 </html>
